Fix background sticking out of the top of property grid

--- a/ui/components/src/ui-components/propertygrid/component/VirtualizedPropertyGrid.scss
+++ b/ui/components/src/ui-components/propertygrid/component/VirtualizedPropertyGrid.scss
@@ -26,7 +26,9 @@
 }
 
 .virtualized-grid-node {
-  background: var(--iui-color-background-1);
+  > :not(.virtualized-grid-node-category) {
+    background: var(--iui-color-background-1);
+  }
 
   .nested-border-middle {
     height: 100%;
